--- a/package.json
+++ b/package.json
@@ -24,5 +24,11 @@
     "sequelize": "^3.5.1",
     "sqlite3": "^3.0.10",
     "underscore": "^1.8.3"
+  },
+  "engines": {
+    "node": "4.1.1"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
